fix overflow items

--- a/src/components/galery.css
+++ b/src/components/galery.css
@@ -10,8 +10,10 @@
    margin: 0;
    list-style: none;
    text-align: center;
-   /* background: aliceblue; */
-   right: -40px;
+  display: flex;
+    justify-content: end;
+    padding-right: 10px;
+   right: 0px;
  }
  .slick-dots li {
    position: relative;
